# TestGenerator

./: .gitignore  LICENSE  README.md
my_pyqt_app/: README.md  pyproject.toml
my_pyqt_app/scripts/: build_resources.py
my_pyqt_app/src/my_pyqt_app/: __init__.py  app.py  main.py
my_pyqt_app/src/my_pyqt_app/controllers/: main_controller.py  settings_controller.py
my_pyqt_app/src/my_pyqt_app/models/: project_model.py  table_models.py  user_settings.py
my_pyqt_app/src/my_pyqt_app/resources/: main_window.ui  styles.qss
my_pyqt_app/src/my_pyqt_app/services/: database_service.py  file_service.py
my_pyqt_app/src/my_pyqt_app/utils/: paths.py
my_pyqt_app/src/my_pyqt_app/views/: main_window.py  settings_dialog.py
my_pyqt_app/src/my_pyqt_app/views/widgets/: file_list_widget.py
my_pyqt_app/tests/: test_models.py  test_services.py
